--- a/index.html
+++ b/index.html
@@ -14,19 +14,29 @@
             <div class="header_content container">
                 <div class="header_brand_logo">
                     <a href="#">
-                        <img src="" alt="logo">
+                        <img src="./assets/images/logo.svg" alt="logo">
                     </a>
                 </div>
                 <div class="header_navigations_links">
                     <ul class="menu">
-                        <li><a href="#" class="header_nav_links">Home</a></li>
-                        <li><a href="#" class="header_nav_links">About Us</a></li>
-                        <li><a href="#" class="header_nav_links">Service</a></li>
-                        <li><a href="#" class="header_nav_links">What we do</a></li>
-                        <li><a href="#" class="header_nav_links">Contact us</a></li>
                         <li>
-                            <div class="cta_main">
-                                <a href="#" class="cta">Contact us</a>
+                            <a href="#" class="header_nav_links">About Us</a>
+                        </li>
+                        <li>
+                            <a href="#" class="header_nav_links">Products</a>
+                        </li>
+                        <li>
+                            <a href="#" class="header_nav_links">Applications</a>
+                        </li>
+                        <li>
+                            <a href="#" class="header_nav_links">Sustainability</a>
+                        </li>
+                        <li>
+                            <a href="#" class="header_nav_links">Contact us</a>
+                        </li>
+                        <li>
+                            <div class="cta_main diraction_aware_hover">
+                                <a href="#" class="cta">Get a Quote</a>
                             </div>
                         </li>
                     </ul>
