--- a/index.html
+++ b/index.html
@@ -50,9 +50,46 @@
         </div>
     </header>
     <main id="main">
-        <section></section>
-        <section></section>
-        <section></section>
+        <section>
+
+        </section>
+        <section id="aboutus">
+            <div class="container">     
+                <div class="section--inner">
+                    <div class="section__title">
+                        <h2> About Us</h2>
+                    </div>
+                    <div class="section__content">
+                        <div class="section__content__inner row">
+                            <div class="col">
+                                <div class="section__col__inner">
+                                    <div class="section__text__holder">
+                                        <p class="section__text">With a legacy spanning over 70 years, SK Impex Corporation has been a family-run business since its inception. The copper division was established by Suresh Shah in the mid-1970s, transforming the company into a leader in copper solutions. Join us on our journey from humble beginnings to industry excellence.</p>
+                                    </div>
+                                    <div class="section__cta__holder">
+                                        <a class="section__cta" href="#">Read More <span class="section__icon"></span></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="section__right__content">
+                                    <div class="brown">
+                                        <p>70+</p>
+                                        <p>Years of Experience</p>
+                                    </div>
+                                    <div class="black">
+                                        <p>1970</p>
+                                        <p>Established</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>     
+                    </div>
+                </div>   
+            </div>
+        </section>
+        <section>
+        </section>
         <section></section>
         <section></section>
     </main>
