--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CuprEon</title>
+    <link rel="shortcut icon" href="./assets/images/fav-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/app.css">
 </head>
 
@@ -36,7 +37,8 @@
                         </li>
                         <li>
                             <div class="cta_main diraction_aware_hover">
-                                <a href="#" class="cta">Get a Quote</a>
+                                <a href="#" class="cta">Get a Quote <span><i
+                                            class="fa-solid fa-arrow-right"></i></span></a>
                             </div>
                         </li>
                     </ul>
@@ -54,7 +56,7 @@
 
         </section>
         <section id="aboutus">
-            <div class="container">     
+            <div class="container">
                 <div class="section--inner">
                     <div class="section__title">
                         <h2> About Us</h2>
@@ -64,10 +66,15 @@
                             <div class="col">
                                 <div class="section__col__inner">
                                     <div class="section__text__holder">
-                                        <p class="section__text">With a legacy spanning over 70 years, SK Impex Corporation has been a family-run business since its inception. The copper division was established by Suresh Shah in the mid-1970s, transforming the company into a leader in copper solutions. Join us on our journey from humble beginnings to industry excellence.</p>
+                                        <p class="section__text">With a legacy spanning over 70 years, SK Impex
+                                            Corporation has been a family-run business since its inception. The copper
+                                            division was established by Suresh Shah in the mid-1970s, transforming the
+                                            company into a leader in copper solutions. Join us on our journey from
+                                            humble beginnings to industry excellence.</p>
                                     </div>
                                     <div class="section__cta__holder">
-                                        <a class="section__cta" href="#">Read More <span class="section__icon"></span></a>
+                                        <a class="section__cta" href="#">Read More <span
+                                                class="section__icon"></span></a>
                                     </div>
                                 </div>
                             </div>
@@ -83,9 +90,9 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>     
+                        </div>
                     </div>
-                </div>   
+                </div>
             </div>
         </section>
         <section>
@@ -100,10 +107,9 @@
 
 
 
-
+    <script src="./js/bootstrap.min.js"></script>
     <script src="./js/gsap.min.js"></script>
     <script src="./js/ScrollTrigger.min.js"></script>
-
     <script type="module" src="./js/app.js"></script>
 </body>
 
