--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class="section__content">
                         <div class="section__content__inner row">
-                            <div class="col">
+                            <div class="col-lg-5">
                                 <div class="section__col__inner">
                                     <div class="section__text__holder">
                                         <p class="section__text">With a legacy spanning over 70 years, SK Impex
@@ -74,19 +74,20 @@
                                     </div>
                                     <div class="section__cta__holder">
                                         <a class="section__cta" href="#">Read More <span
-                                                class="section__icon"></span></a>
+                                                class="section__icon"><i
+                                                class="fa-solid fa-arrow-right"></i></span></a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="col-lg-5">
                                 <div class="section__right__content">
-                                    <div class="brown">
-                                        <p>70+</p>
-                                        <p>Years of Experience</p>
+                                    <div class="about__exp_block brown">
+                                        <h3>70+</h3>
+                                        <p class="about_exp_p">Years of Experience</p>
                                     </div>
-                                    <div class="black">
-                                        <p>1970</p>
-                                        <p>Established</p>
+                                    <div class="about__exp_block black">
+                                        <h3>1970</h3>
+                                        <p class="about_exp_p">Established</p>
                                     </div>
                                 </div>
                             </div>
