--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
                         </li>
                         <li>
                             <div class="cta_main diraction_aware_hover">
-                                <a href="#" class="cta">Get a Quote <span><i
-                                            class="fa-solid fa-arrow-right"></i></span></a>
+                                <a href="#" class="cta">Get a Quote <span><img class="theme_icon"
+                                            src="./assets/images/site_right_icon_fff.svg"
+                                            alt="Image of right icon"></span></a>
                             </div>
                         </li>
                     </ul>
@@ -52,11 +53,68 @@
         </div>
     </header>
     <main id="main">
-        <section>
+        <section id="hero-section">
+            <div class="hero">
+                <div class="hero_inner">
+                    <div class="banner_overlay">
+                        <img src="./assets/images/home-hero-banner-bg.png" alt="Image of banners">
+                    </div>
+                    <div class="banner_content">
+                        <div class="content_inner">
+                            <h1>
+                                Leading Innovation in
+                                Copper Manufacturing
+                            </h1>
+                            <p>
+                                High-quality copper tubes and products tailored to your industry needs
+                            </p>
+                            <div class="diraction_aware_hover">
 
+                                <a href="#" class="cta cta__banner">Browse Products <span><img class="theme_icon"
+                                            src="./assets/images/site_right_icon_theme_clr.svg"
+                                            alt="Image of right icon"></span></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
-        <section id="aboutus">
-            <div class="container">
+        <section id="service-cards-section">
+            <div class="service_card_inner">
+                <div class="service_cards_row container">
+                    <div class=" service_card">
+                        <div class="service_card_top">
+                            <a href="#" class="service_card_link section__cta">
+                                <span>Copper Pipes</span>
+                                <span class="section__icon">
+                                    <img class="section__icon theme_icon"
+                                        src=" ./assets/images/site_right_icon_theme_clr.svg" alt="Image of right icon">
+                                </span>
+                            </a>
+                        </div>
+                        <div class="service_card_bottom">
+                            <img src="./assets/images/copper_tubes.png" alt="Image of card">
+                        </div>
+                    </div>
+                    <div class=" service_card">
+                        <div class="service_card_top">
+                            <a href="#" class="service_card_link section__cta">
+                                <span>Copper Tubes</span>
+                                <span class="section__icon">
+                                    <img class="section__icon theme_icon"
+                                        src=" ./assets/images/site_right_icon_theme_clr.svg" alt="Image of right icon">
+                                </span>
+                            </a>
+                        </div>
+                        <div class="service_card_bottom">
+                            <img src="./assets/images/copper_tubes.png" alt="Image of card">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="about-us">
+            <div class="container padding-top padding-bottom">
                 <div class="section--inner">
                     <div class="section__title">
                         <h2> About Us</h2>
@@ -73,9 +131,10 @@
                                             humble beginnings to industry excellence.</p>
                                     </div>
                                     <div class="section__cta__holder">
-                                        <a class="section__cta" href="#">Read More <span
-                                                class="section__icon"><i
-                                                class="fa-solid fa-arrow-right"></i></span></a>
+                                        <a class="section__cta" href="#">Read More <span class="section__icon"><img
+                                                    class="theme_icon"
+                                                    src="./assets/images/site_right_icon_theme_clr.svg"
+                                                    alt="Image of right icon"></span></a>
                                     </div>
                                 </div>
                             </div>
