--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CuprEon</title>
-    <link rel="shortcut icon" href="./assets/images/fav-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/fav-icon.webp" type="image/x-icon">
     <link rel="stylesheet" href="./css/app.css">
 </head>
 
@@ -57,7 +57,7 @@
             <div class="hero">
                 <div class="hero_inner">
                     <div class="banner_overlay">
-                        <img src="./assets/images/home-hero-banner-bg.png" alt="Image of banners">
+                        <img src="./assets/images/home-hero-banner-bg.webp" alt="Image of banners">
                     </div>
                     <div class="banner_content">
                         <div class="content_inner">
@@ -93,7 +93,7 @@
                             </a>
                         </div>
                         <div class="service_card_bottom">
-                            <img src="./assets/images/copper_tubes.png" alt="Image of card">
+                            <img src="./assets/images/copper_tubes.webp" alt="Image of card">
                         </div>
                     </div>
                     <div class=" service_card">
@@ -107,7 +107,7 @@
                             </a>
                         </div>
                         <div class="service_card_bottom">
-                            <img src="./assets/images/copper_tubes.png" alt="Image of card">
+                            <img src="./assets/images/copper_tubes.webp" alt="Image of card">
                         </div>
                     </div>
                 </div>
@@ -155,7 +155,90 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="our-product">
+            <div class="our-products-section padding-bottom">
+                <div class=" our_products_title container">
+                    <h2>Our Products</h2>
+
+                </div>
+                <div class=" owl-carousel d-block-custom">
+                    <div class="item">
+
+                        <div class=" service_card">
+                            <div class="service_card_top">
+                                <a href="#" class="service_card_link section__cta">
+                                    <span>Copper Pipes</span>
+                                    <span class="section__icon">
+                                        <img class="section__icon theme_icon"
+                                            src=" ./assets/images/site_right_icon_theme_clr.svg"
+                                            alt="Image of right icon">
+                                    </span>
+                                    <span class="slider__p__content">
+                                        <p>
+                                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                            Lorem Ipsum has been the industry's standard
+                                            dummy text ever since the 1500s.
+                                        </p>
+                                    </span>
+                                </a>
+                            </div>
+                            <div class="service_card_bottom">
+                                <img src="./assets/images/copper_pipes_slider.webp" alt="Image of card">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+
+                        <div class=" service_card">
+                            <div class="service_card_top">
+                                <a href="#" class="service_card_link section__cta">
+                                    <span>Copper Tubes</span>
+                                    <span class="section__icon">
+                                        <img class="section__icon theme_icon"
+                                            src=" ./assets/images/site_right_icon_theme_clr.svg"
+                                            alt="Image of right icon">
+                                    </span>
+                                    <span class="slider__p__content">
+                                        <p>
+                                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                            Lorem Ipsum has been the industry's standard
+                                            dummy text ever since the 1500s.
+                                        </p>
+                                    </span>
+                                </a>
+                            </div>
+                            <div class="service_card_bottom">
+                                <img src="./assets/images/copper_tubes_slider.webp" alt="Image of card">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+
+                        <div class=" service_card">
+                            <div class="service_card_top">
+                                <a href="#" class="service_card_link section__cta">
+                                    <span>Copper Plain Coil</span>
+                                    <span class="section__icon">
+                                        <img class="section__icon theme_icon"
+                                            src=" ./assets/images/site_right_icon_theme_clr.svg"
+                                            alt="Image of right icon">
+                                    </span>
+                                    <span class="slider__p__content">
+                                        <p>
+                                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                            Lorem Ipsum has been the industry's standard
+                                            dummy text ever since the 1500s.
+                                        </p>
+                                    </span>
+                                </a>
+                            </div>
+                            <div class="service_card_bottom">
+                                <img src="./assets/images/copper_plain_slider.webp" alt="Image of card">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <section></section>
         <section></section>
@@ -165,8 +248,8 @@
 
 
 
-
-
+    <script src="./js/jquery.js"></script>
+    <script src="./js/owl.carousel.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/gsap.min.js"></script>
     <script src="./js/ScrollTrigger.min.js"></script>
