--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </section>
         <section id="our-product">
             <div class="our-products-section padding-bottom">
-                <div class=" our_products_title container no-padding-right no-padding-left">
+                <div class=" our_products_title container">
                     <h2>Our Products</h2>
 
                 </div>
