--- a/index.html
+++ b/index.html
@@ -159,11 +159,9 @@
             <div class="our-products-section padding-bottom">
                 <div class=" our_products_title container">
                     <h2>Our Products</h2>
-
                 </div>
                 <div class=" owl-carousel d-block-custom">
                     <div class="item">
-
                         <div class=" service_card">
                             <div class="service_card_top">
                                 <a href="#" class="service_card_link section__cta">
@@ -240,7 +238,46 @@
                 </div>
             </div>
         </section>
-        <section></section>
+        <section>
+            <div class="container padding-top padding-bottom">
+                <div class="section--inner">
+                    <div class="section__title">
+                        <h2> Applications</h2>
+                    </div>
+                    <div class="section__content">
+                        <div class="section__content__inner row">
+                            <div class="col-lg-5">
+                                <div class="section__col__inner">
+                                    <div class="section__text__holder">
+                                        <p class="section__text">Copper solutions powering industries. From renewable
+                                            energies to essential plumbing, our products are integral to varied
+                                            industry applications.</p>
+                                    </div>
+                                    <div class="section__cta__holder">
+                                        <a class="section__cta" href="#">Explore More <span class="section__icon"><img
+                                                    class="theme_icon"
+                                                    src="./assets/images/site_right_icon_theme_clr.svg"
+                                                    alt="Image of right icon"></span></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <div class="section__right__content">
+                                    <div class="about__exp_block brown">
+                                        <h3>70+</h3>
+                                        <p class="about_exp_p">Years of Experience</p>
+                                    </div>
+                                    <div class="about__exp_block black">
+                                        <h3>1970</h3>
+                                        <p class="about_exp_p">Established</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section></section>
     </main>
     <footer></footer>
