Home page completed

--- a/index.html
+++ b/index.html
@@ -365,9 +365,7 @@
                                     </span>
                                 </a>
                             </div>
-                            <div class="service_card_bottom">
-                                <img src="./assets/images/copper_pipes_slider.webp" alt="Image of card" />
-                            </div>
+
                         </div>
                     </div>
                     <div class="item">
@@ -389,9 +387,7 @@
                                     </span>
                                 </a>
                             </div>
-                            <div class="service_card_bottom">
-                                <img src="./assets/images/copper_tubes_slider.webp" alt="Image of card" />
-                            </div>
+
                         </div>
                     </div>
                     <div class="item">
@@ -413,15 +409,13 @@
                                     </span>
                                 </a>
                             </div>
-                            <div class="service_card_bottom">
-                                <img src="./assets/images/copper_plain_slider.webp" alt="Image of card" />
-                            </div>
+
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section id="gitBg">
+        <section id="gitBg" class="padding-top padding-bottom">
             <div class="get-in-touch-main">
                 <div class="container">
                     <div class="git_inner">
@@ -447,7 +441,7 @@
         </section>
 
     </main>
-    <footer>
+    <footer id="footer" class="padding-top">
         <div class="footer-email-section">
             <div class="container">
                 <div class=" email_section_inner">
@@ -457,6 +451,47 @@
                     <div class="email_input_area">
                         <input type="email" placeholder="Enter Email" required>
                         <img class="theme_icon" src="./assets/images/site_right_icon_fff.svg" alt="Image of right icon">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-main black">
+            <div class="container">
+
+                <div class="footer_inner">
+                    <div class="footer__left">
+                        <a href="#">
+                            <img src="./assets/images/logo.svg" alt="logo" />
+                        </a>
+                    </div>
+                    <div class="footer__center">
+                        <ul>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Products</a></li>
+                            <li><a href="#">Applications</a></li>
+                            <li><a href="#">Sustainability</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__right">
+                        <div class="contact_details">
+                            <div class="contact_number">
+                                <a href="tel:+91 123-456-7890">+91 123-456-7890</a> <br>
+                                <a href="mailto:info@cupreon.com">info@cupreon.com</a>
+                            </div>
+                            <div class="contact_address">
+                                <a href="#">
+                                    Ashok Nagar, Sapna Sangeeta Rd
+                                    Indore, Madhya Pradesh, India - 452001
+                                </a>
+                            </div>
+                            <div class="contact_social">
+                                <div class="social_inner">
+                                    <a href="#"><i class="fa-brands fa-square-facebook"></i></a><a href="#"><i
+                                            class="fa-brands fa-linkedin"></i></a><a href="#"><i
+                                            class="fa-brands fa-square-youtube"></i></a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
