--- a/about-us.html
+++ b/about-us.html
@@ -90,7 +90,108 @@
                 </div>
             </div>
         </section>
+        <section id="craft">
+            <div class="craft">
+                <div class="craft-left">
+                    <h2>Guiding our
+                        Journey.</h2>
+                </div>
+                <div class="craft-right">
+                    <div class="right-inner">
+                        <div class="right-box">
+                            <h3>Our Mission</h3>
+                            <p>To deliver unparalleled copper solutions both domestically and globally, ensuring
+                                superior quality and customer
+                                satisfaction. We are dedicated to cultivating a broad customer base, enhancing our reach
+                                nationally and internationally,
+                                while maintaining our commitment to environmental responsibility.</p>
+                        </div>
+                        <div class="right-box">
+                            <h3>Our Vision </h3>
+                            <p>To be the “global leader” can we rephrase these words to fit our profile, in copper
+                                manufacturing, continually expanding
+                                our reach and enhancing our products to meet the evolving demands of the industries we
+                                serve.</p>
+                        </div>
+                        <div class="right-box">
+                            <h3>Core Values</h3>
+                            <p>At the heart of SK Impex Corporation are our guiding principles or values instilled by
+                                our founder that drive every
+                                decision and interaction, ensuring we build lasting relationships and deliver
+                                exceptional products.
+                                <span>
+                                    <ul>
+                                        <li>Integrity</li>
+                                        <li>Commitment</li>
+                                        <li>Trust</li>
+                                        <li>Honesty</li>
+                                    </ul>
+                                </span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <style>
+            #craft {
+                background: var(--theme-clr);
+                margin: 50px 200px 50px 0px;
+                height: 490px;
+            }
 
+            section .craft {
+                display: flex;
+                width: 100%;
+                justify-content: space-between;
+            }
+
+            section .craft .craft-left {
+                display: flex;
+
+            }
+
+            section .craft .craft-left h2 {
+                max-width: 420px;
+                font-size: 36px;
+                align-self: flex-start;
+                /* position: sticky;
+                position: -webkit-sticky;
+                top: 10rem; */
+
+            }
+
+            section .craft .craft-right {
+                margin-right: 150px;
+                padding: 290px 0px;
+            }
+
+            section .craft .craft-right .right-inner {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                gap: 30px;
+                max-width: 100%;
+                width: 500px;
+            }
+
+            section .craft .craft-right .right-inner .right-box {
+                border: 1px solid #000;
+                padding: 20px;
+                text-align: center;
+                max-width: 420px;
+                width: 100%;
+                color: #000;
+                opacity: 0;
+            }
+
+            section .craft .craft-right .right-inner .right-box h3 {
+                font-size: 32px;
+            }
+
+            section .craft .craft-right .right-inner .right-box p {}
+        </style>
         <section class="inner-common-section section-spacing inner-left-common">
             <div class="inner-common-text">
                 <div class="row">
